--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "metric-heartbeat-server",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "test:server": "node server/index.js",
+    "test": "vite preview --port 8080",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "proxy": "node server/proxy.js --port 4001",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "del metrics.db metrics.db-shm metrics.db-wal"
+
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -67,6 +71,13 @@
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
+  "keywords": [
+    "api",
+    "monitoring",
+    "observability",
+    "metrics",
+    "dashboard"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
