--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "proxy": "node server/proxy.js --port 4001",
+    "collector": "node server/collector.js --port 3002",
     "lint": "eslint .",
     "preview": "vite preview",
     "clean": "del metrics.db metrics.db-shm metrics.db-wal"
-
-  },
+  }
+,
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
