--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "dev:test-traffic": "node server/testTraffic.js",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
-    "dev:frontend": "vite --port 8080 --host",
-    "dev:backend": "nodemon server/index.js",
+    "dev": "vite --port 8080 --host",
     "clean": "del metrics.db metrics.db-shm metrics.db-wal"
   },
   "dependencies": {
